language/move-lang/tests/move_check/parser/spec_parsing_emits_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_emits_fail.move:3:19
  │
3 │         emits _msg;
  │                   ^
  │                   │
  │                   Unexpected ';'
  │                   Expected 'to'

