language/move-lang/tests/move_check/parser/spec_parsing_emits_fail.move
module M {
    spec with_emits {
        emits _msg;
    }
    fun with_emits<T: drop>(_guid: vector<u8>, _msg: T, x: u64): u64 {
        x
    }
}
